[AAE-4428] Add selected file counter to attach file widget

--- a/lib/content-services/src/lib/content-node-selector/content-node-selector-panel.component.html
+++ b/lib/content-services/src/lib/content-node-selector/content-node-selector-panel.component.html
@@ -57,6 +57,10 @@
                 [root]="breadcrumbFolderTitle"
                 data-automation-id="content-node-selector-content-breadcrumb">
             </adf-dropdown-breadcrumb>
+            <div
+                data-automation-id="content-node-selector-selected-counter">
+                {{ getSelectedCountTranslation() }}
+            </div>
         </adf-toolbar-title>
     </adf-toolbar>
 
