--- a/lib/content-services/src/lib/content-node-selector/content-node-selector.component.scss
+++ b/lib/content-services/src/lib/content-node-selector/content-node-selector.component.scss
@@ -25,6 +25,10 @@
         .adf-upload-dialog-container {
             height: 456px;
         }
+
+        .adf-toolbar-title {
+            place-items: center;
+        }
     }
 
     .adf-content-node-selector-dialog {
