[AAE-4428] Changed so TranslationService injection is not necessary

--- a/lib/content-services/src/lib/content-node-selector/content-node-selector-panel.component.html
+++ b/lib/content-services/src/lib/content-node-selector/content-node-selector-panel.component.html
@@ -59,7 +59,7 @@
             </adf-dropdown-breadcrumb>
             <div
                 data-automation-id="content-node-selector-selected-counter">
-                {{ getSelectedCountTranslation() }}
+                {{ 'NODE_SELECTOR.SELECTED_COUNT' | translate: { count: getSelectedCount() } }}
             </div>
         </adf-toolbar-title>
     </adf-toolbar>
